# pulumi-kubernetes

./: .ci-mgmt.yaml  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .travis.yaml  .travis.yml  CHANGELOG.md  CHANGELOG_OLD.md  CONTRIBUTING.md  Gometalinter.json  Gopkg.toml  Makefile  Makefile.pack  README.md  codecov.yml  credentials.tar.gz.enc  go.mod  go.sum  go.work  go.work.sum  mise.toml  readme.md  resources.go  revendor.sh  schema.json
sdk/python/: README.md  README.rst  pyproject.toml  setup.py
sdk/python/pulumi_kubernetes/: __init__.py  _inputs.py  _tables.py  _utilities.py  kustomize.py  outputs.py  provider.py  pulumi-plugin.json  tables.py  utilities.py  version.py  yaml.py
sdk/python/pulumi_kubernetes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/python/pulumi_kubernetes/admissionregistration/: __init__.py
sdk/python/pulumi_kubernetes/apiextensions/: CustomResource.py  __init__.py  custom_resource.py
sdk/python/pulumi_kubernetes/apiregistration/: __init__.py
sdk/python/pulumi_kubernetes/apps/: __init__.py
sdk/python/pulumi_kubernetes/auditregistration/: __init__.py
sdk/python/pulumi_kubernetes/authentication/: __init__.py
sdk/python/pulumi_kubernetes/authorization/: __init__.py
sdk/python/pulumi_kubernetes/autoscaling/: __init__.py
sdk/python/pulumi_kubernetes/batch/: __init__.py
sdk/python/pulumi_kubernetes/certificates/: __init__.py
sdk/python/pulumi_kubernetes/coordination/: __init__.py
sdk/python/pulumi_kubernetes/core/: __init__.py
(+15240 files in other folders)
