[project]
  name = "pulumi_kubernetes"
  description = "A Pulumi package for creating and managing Kubernetes resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.25.0,<4.0.0", "requests>=2.21,<3.0", "semver>=2.8.1"]
  keywords = ["pulumi", "kubernetes", "category/cloud", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.7"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-kubernetes"
